OO-5504: Improvement: notifications for members when removing